# sliske

./: README.md  pyproject.toml
sliske/: main.py
sliske/cogs/: message_logger.py
