[tool.poetry]
name = "sliske"
version = "0.1.0"
description = ""
authors = ["John Vinh <john.michael.vinh2@gmail.com>"]
readme = "README.md"
packages = [
    {include = "sliske"}
]

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
